# GH Copilot code - starts
"""
EmailVerificationService implementation for generating tokens
"""
class User:
    def __init__(self, email, name):
        self.email = email
        self.name = name

class EmailVerificationService:
    def generate_token(self, user):
        # Simulate token generation
        return f"token-for-{user.email}"
# GH Copilot code - end
